Fix meeting-invite overflow issue

--- a/frontend/src/app/shared/components/meeting-invite/meeting-invite.component.sass
+++ b/frontend/src/app/shared/components/meeting-invite/meeting-invite.component.sass
@@ -42,8 +42,13 @@ div.ui.small.input
     width: calc(100% - 30px)
 
 .ui.relaxed.divided.selection.list
-    margin-bottom: 50px
+    margin-bottom: 25px
     .item
         padding: 0
     max-height: 40vh
     overflow-y: auto
+
+.ui.modal>.content
+    max-height: 80vh
+    display: flex
+    flex-direction: column
